# car-telemetry-dashboard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/car-telemetry/: Cargo.toml
crates/car-telemetry/src/: lib.rs
web/: index.html
web/src/: app.js  styles.css
