[package]
name = "car-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust telemetry model for car data dashboards"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
